Fixed #80 Improve visibility damage tracking

--- a/client/stylesheets/modules/card.sass
+++ b/client/stylesheets/modules/card.sass
@@ -35,13 +35,35 @@
     border-radius: 5px
     opacity: 0.7
 
+  &.damage
+    width: 19%
+    margin-left: 1%
+    border: 1px dashed #e3e3e3
+    border-radius: 5px
+    opacity: 0.7
+    background-color: #777
+    background-image: url('/damage-token.png')
+    background-repeat: no-repeat
+    background-size: 60px 50px
+    background-position: center center
+    &:hover
+      transform: none
 
-  span
+  &.locked
+    &:hover
+      transform: none
+
+  span.priority
     position: absolute
     top: 8%
     left: 58%
     font-size: 10px
     color: #E5D839
+
+  img.locked
+    position: absolute
+    top: 0
+    left: 0
 
   &.selected
     background: #449d44
